Delete and Update Operation

--- a/cms/view-customers.html
+++ b/cms/view-customers.html
@@ -63,8 +63,8 @@
         <td>{{row[5]}}</td>
         <td>{{row[6]}}</td>
         <td>{{row[7]}}</td>
-        <td><a href="">Delete</a></td>
-        <td><a href="">Update</a></td>
+        <td><a href="/delete/{{row[0]}}">Delete</a></td>
+        <td><a href="/update-customer">Update</a></td>
       </tr>
 
       {% endfor %}
